--- a/DnsWebShell/Views/Main/Index.cshtml
+++ b/DnsWebShell/Views/Main/Index.cshtml
@@ -10,7 +10,7 @@
 
 	<div id="form form-floating" class="p-2">
 		<textarea class="form-control" placeholder="Введите команду" id="requestString" style="height: 35px"></textarea>
-		<button type="submit" id="submit" class="button-submit btn btn-dark">Submit</button>
+		<button type="submit" id="submit" class="button-submit btn btn-dark">Отправить</button>
 	</div>
 
 
