--- a/DnsWebShell/Views/Main/Index.cshtml
+++ b/DnsWebShell/Views/Main/Index.cshtml
@@ -39,4 +39,4 @@
 	</div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-<script src="~/lib/js/mainPage.js"></script>
+<script src="~/lib/js/mainPage.js?v=2"></script>
